# klaster

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: 2025-03-17a.org  2025-03-31a.org  2025-04-07b.org  2025-04-14a.org  2025-04-25b.org  2025-04-28a.org  2025-05-(05-19)b.org  2025-05-05b.org
docs/generate-docs-from-code/docs/: generate_documentation_from_code.md  index.md
docs/generate-docs-from-code/python/: simple_math.py
docs/literature/density/: how_hdbscan_works.desktop
docs/meeting-notes/: 2025-03-31-team-task-1.org  2025-04-25b.org  2025-04-28a.org  2025-05-(05-19)b.org  2025-05-05-thesis-tips.org  2025-05-26a.org  2025-06-25b-semester-raport.org  2025-07-05-deep-clustering.org
docs/meetings/group/: 2025-02-04.org
docs/meetings/individual/: 2025-03-24.org
docs/profiling/: cpu.rs  heaptrack.roger.zst  mem.rs  memray-flamegraph-brownian.html
examples/: bcw.rs  hdbscan.rs  kmeans-linfa.rs  measure_python_libs.py  mnist.rs  pyproject.toml  sdc.rs  synth.rs
examples/nddc_v1/: nddc.py  pyproject.toml
examples/python_impl/: charcluster.py  deep_clustering_model.py  helper.py  main.py  nddc.py  pyproject.toml  unipen_dataset.py
examples/reference_impl_python/: helper.py  main.py  pyproject.toml
examples/reference_impl_rust/: bcw.rs  main.rs  metrics.rs
examples/reference_python_impl/: main.py
examples/rust_impl/: main.rs  metrics.rs
journal/: python-example.ipynb
journal/generate-docs-from-code/: mkdocs.yml
journal/generate-docs-from-code/rust/src/math/: mod.rs
journal/profiling/: Justfile  cpu.py  cpu.rs  mem.py  profiling.md
journal/python-example/: main.py  pyproject.toml
src/: lib.rs  metrics.rs  research.rs
src/hdbscan/: mod.rs
src/kmeans/: dist.rs  init.rs  mod.rs
src/metrics/: acc.rs  benchmark.rs  mod.rs
src/n2d/: mod.rs
src/sdc/: autoencoder.rs  cdist.rs  clustering.rs  dataset.rs  inference.rs  loss.rs  mnist_data.rs  mod.rs  model.rs  training.rs
src/sdc/metric/: acc.rs  ari.rs  mod.rs  nmi.rs
tutorial/: Makefile  README.md  mkdocs.yml  pyproject.toml
tutorial/docs/: api.md  howtomkdocs.md  howtopython.md  howtorust.md  index.md
tutorial/python/: simple_math.py
tutorial/rust/src/: lib.rs
tutorial/rust/src/math/: mod.rs
