[project]
name = "nddc-v1"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
 "torchaudio>=2.7.1",
 "torchvision>=0.22.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
